--- a/llama-index-integrations/storage/kvstore/llama-index-storage-kvstore-duckdb/pyproject.toml
+++ b/llama-index-integrations/storage/kvstore/llama-index-storage-kvstore-duckdb/pyproject.toml
@@ -32,11 +32,12 @@ requires-python = ">=3.9,<4.0"
 readme = "README.md"
 license = "MIT"
 dependencies = [
-    "duckdb>=0.10.1,<1.3.1",
+    "duckdb>=0.10.1,<1.4.0",
     "llama-index-core>=0.12.0,<0.13",
     "llama-index-vector-stores-duckdb>=0.1.0",
     "pyarrow>=20.0.0",
     "pyarrow-stubs>=20.0.0.20250627",
+    "pytest-asyncio>=0.23.8",
 ]
 
 [tool.codespell]
